CORE-16623 : Fixed compilation and merge issue